feature: refactor user app 1. For current user will be rendered list ONLY his friends. 2. Current user can view detail_page ONLY of those users which is his friends 3. Current user will see stats of his friends ONLY in public sessions that's friends. If for some metrica on friend detail_page have only private session('s) - currents user won't be able to see that metrica (will see that metrica of only it has at least one public session) 4. Calculating days of session, frequency of the session and score - all will depend on "private/public" flag of session. Owner will see all data, friend - only public session data. 5. Add AddFriendAddView to achieve ability for friends managment. 6. Add "button" for friend managment

--- a/users/templates/users_index.html
+++ b/users/templates/users_index.html
@@ -4,6 +4,8 @@
 {% block content %}
     {% bootstrap_messages %}
 
+<!--todo сделать кнопку и логику добавления в друзья юзеров из выпадающего спиcка в header'e - наследоваться от base.html-->
+
     <div class="row mb-3">
         <div class="col">
             <h4>
@@ -12,6 +14,7 @@
                 {% else  %}
                     <a href="{% url 'users:users_index' %}">Your wolf pack</a>
                 {% endif %}
+                    <a href="{% url 'users:friend_add' user.pk %}">Add wolf to your pack</a>
             </h4>
         </div>
     </div>
