feature: create view, form and template for "friend" feature. On "get" return ModelForm with filtered queryset of Users which not in "friendship" m2m user attribute (not a friend). On "post" - send ModelForm with populated data of to whom user request.user want to be added to "friendship" m2m field. From the moment this form was submitted, the profile of the current user becomes available for the selected "friend"

--- a/users/templates/friend_add.html
+++ b/users/templates/friend_add.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 
 {% block content %}
-    <form method="POST" action="{% url 'users:friend_add' user.pk %}">
+    <form method="POST" action="{% url 'users:friend_add' %}">
         {% csrf_token %}
         {% bootstrap_form form %}
         <div class="form-group">
