--- a/users/templates/users_index.html
+++ b/users/templates/users_index.html
@@ -4,8 +4,6 @@
 {% block content %}
     {% bootstrap_messages %}
 
-<!--todo сделать кнопку и логику добавления в друзья юзеров из выпадающего спиcка в header'e - наследоваться от base.html-->
-
     <div class="row mb-3">
         <div class="col">
             <h4>
@@ -14,7 +12,7 @@
                 {% else  %}
                     <a href="{% url 'users:users_index' %}">Your wolf pack</a>
                 {% endif %}
-                    <a href="{% url 'users:friend_add' user.pk %}">Add wolf to your pack</a>
+                <a href="{% url 'users:friend_add' %}">Add wolf to your pack</a>
             </h4>
         </div>
     </div>
