feature: new templates for "friendship" managing; refactor 'CustomUserAddFriendForm' from ModelForm to Form inheritor for union fields from two different models and further process in view;

--- a/users/templates/request_detail.html
+++ b/users/templates/request_detail.html
@@ -4,8 +4,7 @@
     <div class="row mb-3">
         <div class="col">
             <h4>
-                <a href="{% url 'users:users_index' %}">{% if user.is_staff %}Users{% else %}Your wolf pack{% endif %}</a> / {{ object.username }}
-                <a href="{% url 'users:friendship_requests_list' %}">| Friendship requests</a>
+                <a href={% url 'users:users_index' %}>{% if user.is_staff %}Users{% else %}Your wolf pack{% endif %}</a> / {{ object.username }}
             </h4>
         </div>
     </div>
