templates: add JS scripts for "in" (from RequestList CBV) and "out" (to CustomUserList CBV) for websocket connections. From client script open new 'ws' connection and from context (data about new friendship requests) and push it to "ws" groups (abstraction layer for "conversation" иуецуут consumers)

--- a/users/templates/requests_list.html
+++ b/users/templates/requests_list.html
@@ -138,7 +138,7 @@
                                         {% csrf_token %}
                                         {% bootstrap_form form %}
                                         <div class="form-group">
-                                            <input class="btn btn-danger" type="submit" value='Withdraw request'>
+                                            <input id="withdraw-request" class="btn btn-danger" type="submit" value='Withdraw request'>
                                         </div>
                                     </form>
                                 </td>
@@ -155,4 +155,24 @@
             You didn't make any friendship request
         </h3>
     {% endif %}
+
+<input id="notify-new-friends" class="btn btn-danger" type="button" value='Notify my friends'>
+
+{{ new_friends | json_script:"new_friends" }}
+<script>
+            const socket = new WebSocket(
+            'ws://'
+            + window.location.host
+            + '/ws/'
+            );
+
+            document.querySelector('#notify-new-friends').onclick = function(e) {
+                const data = JSON.parse(
+                    document.getElementById("new_friends").textContent
+                );
+                socket.send(JSON.stringify({
+                'message': data
+            }));
+        };
+</script>
 {% endblock content %}
