--- a/users/templates/users_index.html
+++ b/users/templates/users_index.html
@@ -34,15 +34,6 @@
                 {% for player in users_list %}
                     <tr>
                         <th scope="row">{{ player.id }}</th>
-{% comment %}
-                        <td>
-                            {% if user.pk == player.pk or user.is_staff %}
-                                <a href="{{ player.get_absolute_url }}">{{ player.username }}</a>
-                            {% else %}
-                                {{ player.username }}
-                            {% endif %}
-                        </td>
-{% endcomment %}
                         <td>
                             <a href="{{ player.get_absolute_url }}">{{ player.username }}</a>
                         </td>
@@ -61,5 +52,26 @@
                 </tbody>
             </table>
         </div>
+        <textarea id=friendship-requests cols="50" rows="5"></textarea><br>
     </div>
+<script>
+        const socket = new WebSocket(
+        'ws://'
+        + window.location.host
+        + '/ws/'
+        );
+
+<!--Варианты с оповещение юзера о получении запроса на дружбу-->
+        socket.onmessage = function(e) {
+            const data = JSON.parse(e.data);
+            alert(data.message)
+        };
+
+        socket.onmessage = function(e) {
+            const data = JSON.parse(e.data);
+            document.querySelector('#friendship-requests').value += (data.message + '\n');
+        };
+
+</script>
+
 {% endblock %}
