views: 1. add new context with most_active_day in terms of the number of games played (evaluate by custom 'calendar' util); 2. change 'frequency' context to getting game_session_calendar with name-format of weekday instead name-format of weekday

--- a/users/templates/users_detail.html
+++ b/users/templates/users_detail.html
@@ -66,32 +66,32 @@
                 <tr>
                     <th>Last {{ object.username }}'s 5 games played</th>
                     <th>Summary score</th>
-                    <th>Day played</th>
-                    <th>Frequency</th>
+                    <th>RUSH DAY</th>
+                    <th>Sessions frequency</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
                     <td>
                         {% for game in last_five_games_played %}
-                            <a href="{% url 'games:games_detail' game.pk %}">{{ game }}</a>
+                            <p>
+                                <a href="{% url 'games:games_detail' game.pk %}">{{ game }}</a>
+                            </p>
                         {% endfor %}
                     </td>
                     <td>
                         {% for game in last_five_games_played %}
-                            <div>
+                            <p>
                                 {{ game.player_score }}
-                            </div>
+                            </p>
                         {% endfor %}
                     </td>
                     <td>
-                        {% for day in sessions %}
-                            {{ day.weekday }}
-                        {% endfor %}
+                        {{ most_active_day }}
                     </td>
                     <td>
-                        {% for elem in frequency.items %}
-                            {{ elem }}
+                        {% for day, percentage in frequency.items %}
+                            {{ day }}: {{ percentage }}
                         {% endfor %}
                     </td>
                 </tr>
