fix: refactor utility for getting "rush-day" for cases when user is just registered and don't have any player statistic yet

--- a/users/templates/users_detail.html
+++ b/users/templates/users_detail.html
@@ -87,7 +87,9 @@
                         {% endfor %}
                     </td>
                     <td>
-                        {{ most_active_day }}
+                        {% if most_active_day %}
+                            {{ most_active_day }}
+                        {% endif %}
                     </td>
                     <td>
                         {% for day, percentage in frequency.items %}
