fix "url" template router

--- a/Metrica_project/templates/metrica_index.html
+++ b/Metrica_project/templates/metrica_index.html
@@ -6,8 +6,8 @@
 
     <div class="row mb-4">
         <div class="col">
-            <a href={% url 'users:users_index' %}>Users</a> |
-            <a href={% url 'games:games_index' %}>Games</a>
+            <a href="{% url 'users:users_index' %}">Users</a> |
+            <a href="{% url 'games:games_index' %}">Games</a>
         </div>
     </div>
 
