--- a/users/templates/request_proceed.html
+++ b/users/templates/request_proceed.html
@@ -1,7 +1,8 @@
 {% comment %}
 Useless template. Forms render by FriendRequestListView with FormMixin directly in list of friendship requests.
 This helped to avoid unnecessary forms rendering and form of confirmation of the action on the page.
-Referenced FriendRequestProceedView don't have access to template form rendering process (but it still can under the hood)
+Referenced FriendRequestProceedView don't have access to template form rendering process (but it still can under the
+hood)
 {% endcomment %}
 
 {% extends "base.html" %}
