--- a/users/templates/feedback.html
+++ b/users/templates/feedback.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 
 {% block content %}
-    <form action={% url 'users:feedback' %} method="post">
+    <form action="{% url 'users:feedback' %}" method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
         <input class="btn btn-primary" type="submit" value='Send'>
