--- a/users/templates/request_detail.html
+++ b/users/templates/request_detail.html
@@ -4,7 +4,9 @@
     <div class="row mb-3">
         <div class="col">
             <h4>
-                <a href={% url 'users:users_index' %}>{% if user.is_staff %}Users{% else %}Your wolf pack{% endif %}</a> / {{ object.username }}
+                <a href="{% url 'users:users_index' %}">
+                    {% if user.is_staff %}Users{% else %}Your wolf pack{% endif %}
+                </a> / {{ object.username }}
             </h4>
         </div>
     </div>
@@ -71,7 +73,7 @@
                     </td>
                     <td>
                         {% for game in last_five_games_played %}
-                            <a href={% url 'games:games_detail' game.pk %}>{{ game }}</a>
+                            <a href="{% url 'games:games_detail' game.pk %}">{{ game }}</a>
                         {% endfor %}
                     </td>
                     <td>
