--- a/users/templates/users_detail.html
+++ b/users/templates/users_detail.html
@@ -4,7 +4,9 @@
     <div class="row mb-3">
         <div class="col">
             <h4>
-                <a href="{% url 'users:users_index' %}">{% if user.is_staff %}Users{% else %}Your wolf pack{% endif %}</a> / {{ object.username }}
+                <a href="{% url 'users:users_index' %}">
+                    {% if user.is_staff %}Users{% else %}Your wolf pack{% endif %}
+                </a> / {{ object.username }}
                 <a href="{% url 'users:friendship_requests_list' %}">| Friendship requests</a>
             </h4>
         </div>
