refactor: add announcement on index page

--- a/Metrica_project/templates/metrica_index.html
+++ b/Metrica_project/templates/metrica_index.html
@@ -13,7 +13,10 @@
 
     <div class="row">
         <div class="col">
-            <p>{% lorem %}</p>
+            <H5>Приложение для учета статистики активностей пользователя: количество очков, игры, участники, друзья.
+                Приложение имеет интерфейс телеграм-бота (`a-ww-bot` - название бота для подключения в чате), который
+                является точкой входа для регистрации пользователя и метрики в системе, запись в БД результатов
+                активности, подписка на сервисы приложения (регулярные статистичческие уведомления).</H5>
         </div>
     </div>
 {% endblock %}
